# sabre

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
sabre/: CMakeLists.txt
sabre/include/sabre/: AST.h  AST_Printer.h  Check.h  Dummy.h  Err.h  Expr_Value.h  GLSL.h  HLSL.h  IR.h  IR_Text.h  Parse.h  Reflect.h  SPIRV.h  Scan.h  Scope.h  Tkn.h  Token_List.h  Type_Interner.h  Unit.h  Utils.h
sabre/src/sabre/: AST.cpp  AST_Printer.cpp  Check.cpp  Dummy.cpp  Err.cpp  Expr_Value.cpp  GLSL.cpp  HLSL.cpp  IR.cpp  IR_Text.cpp  Parse.cpp  Reflect.cpp  SPIRV.cpp  Scan.cpp  Scope.cpp  Type_Interner.cpp  Unit.cpp  Utils.cpp
sabrec/: CMakeLists.txt  main.cpp
unittest/: CMakeLists.txt  unittest_sabre.cpp
unittest/data/check/: add_func.sabre  address_mode.sabre  address_mode.sabre.out  ambiguous_overloaded_templates.sabre  ambiguous_overloaded_templates.sabre.out  array_with_errors.sabre  array_with_errors.sabre.out  bitwise.sabre  bitwise.sabre.out  bvec.sabre  colliding_uniforms.sabre  colliding_uniforms.sabre.out  compile_if_error.sabre  compile_if_error.sabre.out  complit.sabre  complit.sabre.out  complit_vec.sabre  complit_vec.sabre.out  enum.sabre  enum_cast.sabre  enum_with_error.sabre  enum_with_error.sabre.out  func_call_explicit_template_args.sabre  func_call_explicit_template_args.sabre.out  func_overload.sabre  func_overload_error.sabre  func_overload_error.sabre.out  import_add.sabre  import_libA.sabre  import_libB.sabre  import_libC.sabre  import_package_const.sabre  literal_types.sabre  literal_types.sabre.out  mat_complit.sabre  mat_complit.sabre.out  mat_vec_multiply.sabre  mat_vec_multiply.sabre.out  missing_return.sabre  missing_return.sabre.out  (+33 more)
unittest/data/codegen/: add.sabre.out.glsl  add.sabre.out.hlsl  array.sabre.out.glsl  array.sabre.out.hlsl  assign_stmt.sabre  assign_stmt.sabre.out.glsl  assign_stmt.sabre.out.hlsl  block_scope.sabre.out.hlsl  build_backend.sabre  build_backend.sabre.out.glsl  build_backend.sabre.out.hlsl  bvec.sabre.out.hlsl  complit.sabre  complit.sabre.out.glsl  complit.sabre.out.hlsl  complit_with_default_values.sabre  complit_with_default_values.sabre.out.hlsl  enum.sabre.out.glsl  enum.sabre.out.hlsl  folder_imports.sabre  folder_imports.sabre.out.glsl  folder_imports.sabre.out.hlsl  func_overload.sabre  func_overload.sabre.out.glsl  func_overload.sabre.out.hlsl  func_overload_unordered.sabre  func_overload_unordered.sabre.out.glsl  func_overload_unordered.sabre.out.hlsl  func_template_default_value.sabre  func_template_default_value.sabre.out.hlsl  import_with_same_symbol_name.sabre  infinite_loop.sabre.out.glsl  infinite_loop.sabre.out.hlsl  libA.sabre  libA.sabre.out.glsl  libB.sabre.out.glsl  mat_complit.sabre  mat_complit.sabre.out.glsl  mat_complit.sabre.out.hlsl  stmt.sabre  (+10 more)
unittest/data/codegen-shader/: compute_buffer_read.sabre  compute_buffer_read.sabre.out.hlsl  compute_buffer_read_big_struct.sabre  compute_buffer_read_big_struct.sabre.out.hlsl  compute_buffer_write.sabre  compute_buffer_write.sabre.out.hlsl  compute_rw_texture.sabre  compute_rw_texture.sabre.out.hlsl  compute_rw_texture_from_package.sabre  compute_rw_texture_from_package.sabre.out.hlsl  compute_shader_arg_no_tag.sabre  compute_shader_arg_no_tag.sabre.out.hlsl  compute_shader_struct_no_tag.sabre  compute_shader_struct_no_tag.sabre.out.hlsl  instanced_vertex.sabre.out.hlsl  phong_pixel.sabre  phong_pixel.sabre.out.glsl  phong_pixel.sabre.out.hlsl  phong_vertex.sabre.out.glsl  phong_vertex.sabre.out.hlsl  pixel_templated_overload.sabre  pixel_templated_overload.sabre.out.hlsl  simple_compute.sabre  simple_compute.sabre.out.hlsl  simple_compute_with_default_argument.sabre  simple_compute_with_default_argument.sabre.out.hlsl  simple_geometry.sabre  simple_geometry.sabre.out.hlsl  simple_geometry_line_stream.sabre  simple_geometry_line_stream.sabre.out  simple_geometry_point_stream.sabre  simple_geometry_point_stream.sabre.out  simple_geometry_triangle_stream.sabre  simple_geometry_triangle_stream.sabre.out.hlsl  simple_pixel.sabre  simple_pixel.sabre.out.glsl  simple_pixel.sabre.out.hlsl  simple_vertex.sabre  simple_vertex.sabre.out.glsl  simple_vertex.sabre.out.hlsl
unittest/data/decl/: add.sabre  add.sabre.out  enum.sabre  enum.sabre.out  if.sabre  if.sabre.out  import.sabre  import.sabre.out  import_no_name.sabre  import_no_name.sabre.out  struct.sabre  struct.sabre.out  struct_point.sabre  struct_point.sabre.out  tag_decl.sabre  tag_decl.sabre.out  tag_decl_with_args.sabre  tag_decl_with_args.sabre.out  tag_decl_with_const_args.sabre  tag_decl_with_const_args.sabre.out  tag_decl_with_int_args.sabre  tag_decl_with_int_args.sabre.out  tag_func_args.sabre  tag_func_args.sabre.out  tag_struct_fields.sabre  tag_struct_fields.sabre.out  template_struct.sabre  template_struct.sabre.out  template_struct_with_default_arg_type.sabre  template_struct_with_default_arg_type.sabre.out  template_struct_with_missing_default_argument.sabre  template_struct_with_missing_default_argument.sabre.out  var_in_func.sabre  var_in_func.sabre.out  var_infered_type.sabre  var_infered_type.sabre.out  var_multiname.sabre  var_multiname.sabre.out  var_no_init.sabre.out  var_no_init_no_type.sabre.out
unittest/data/expr/: binary.sabre.out  binary_no_rhs.sabre  binary_no_rhs.sabre.out  call_explicit_template_args.sabre  call_explicit_template_args.sabre.out  cast.sabre  cast.sabre.out  complit.sabre  complit.sabre.out  float_atom.sabre  float_atom.sabre.out  unary.sabre.out
unittest/data/glsl/: add.sabre  app.sabre  app.sabre.out  array.sabre  array.sabre.out  array_with_errors.sabre  array_with_errors.sabre.out  block_scope.sabre  block_scope.sabre.out  bvec.sabre.out  complit.sabre  complit.sabre.out  complit_with_default_values.sabre  complit_with_default_values.sabre.out  enum.sabre  enum.sabre.out  folder_imports.sabre  folder_imports.sabre.out  func_overload.sabre  func_overload.sabre.out  libA.sabre.out  (+14 more)
unittest/data/glsl-shader/: phong_pixel.sabre  phong_pixel.sabre.out  phong_vertex.sabre  phong_vertex.sabre.out  simple_vertex.sabre  simple_vertex.sabre.out
(+73 files in other folders)
